# paganini-aios

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  THIRD-PARTY-NOTICES.md  THIRD_PARTY_LICENSES.md  config.example.yaml  config.yaml  demo.sh  deploy.sh  docker-compose.yml  eval_questions.jsonl  gap-analysis-v2.md  gap-analysis.html  install.sh  moltis.example.yaml  paganini.sh  pyproject.toml  quickstart.sh  setup.sh  spec.md
.github/workflows/: ci.yml  security.yml
.sentrux/: baseline.json  rules.toml
agents/: example.md
core/auth/: __init__.py  data_isolation.py  jwt_auth.py  middleware.py  rbac.py  tenant.py
core/bmad/: pipeline.py
core/channels/: api.py  api_client.py  api_middleware.py  api_routes.py  audit.py  cli.py  serve.py  slack.py  telegram.py  telegram_client.py  tui.py
core/dashboard/: index.html  tunnel-config.json  validation.html
core/guardrails/: base.py  hallucination.py  output_validation.py  pii_redaction.py  regulatory_citation.py
core/hitl/: __init__.py  cron_delivery.py  telegram_approval.py  workflow.py
core/ingestion/: __init__.py  pipeline.py
core/learning/: __init__.py  feedback.py  session_search.py  user_model.py
core/memory/: manager.py
core/metering/: __init__.py  alerts.py  cost.py  counter.py  limiter.py  persistence.py
core/moltis/: llm.py
core/packs/: loader.py  modules.py
core/rag/: __init__.py  autoresearch_runner.py  chunk_headers.py  compressor.py  domain.py  eval.py  graph_rag.py  health.py  kg_bridge.py  metadata_filter.py  multi_query.py  pipeline.py  reranker.py
docs/: BMAD-DASHBOARD-PLAN.md  FAQ.md  REVENUE_MODEL.md  bloomberg-terminal-roadmap.html  index.html  infra-cost-plan.html  production-readiness-review.html  revenue-model.html  visao-executiva.html
infra/: Dockerfile  Dockerfile.slim  daemons.yaml  docker-compose.yaml  paganini-daemons.service  paganini-daemons.timer  paganini-dashboard.service  setup-poc-https.sh
kernel/: hyperagent.py
scripts/: arc_benchmark.py  export_chunks_for_rl.py  modal_27b.py  modal_27b_awq.py  modal_27b_fp8.py  modal_27b_gguf.py  modal_vllm.py  paganini_codex.py  paganini_gate.py  test_e2e.py
skills/: loader.py  skill-lock-fidc.json
tests/: conftest.py  test_agents.py  test_auth.py  test_bm25.py  test_bmad.py  test_chroma_health.py  test_cvm_ingester.py  test_daemons.py  test_guardrail_base.py  test_guardrails.py  test_handlers.py  test_hitl.py  test_learning.py  test_memory.py  test_metering.py  test_modules.py  test_moltis.py  test_ontology.py  test_orchestrator.py  test_pack_loader.py  test_rag.py  test_router.py  test_safety_gates.py  test_security.py
vivaldi_fidc/: FIDC-Infra - O Novo Motor do Financiamento de Infraestrutura no Brasil.md  Modelagem Matem#U00e1tica da Efici#U00eancia Tribut#U00e1ria de FIDCs.md  Of#U00edcio Circular n#U00ba 8_2025_CVM_SSE.md  Sem t#U00edtulo 14.md  Sem t#U00edtulo 15.md  relatorio_cadoc3040_fidc.md  relatorio_icvm489_fidc (1).md  seo-geo-copy-eval-viewer.html
(+271 files in other folders)
