[project]
name = "paganini-aios"
version = "0.1.0"
description = "AI Operating System for Financial Markets"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Rod Marques", email = "rod.marques@aios.finance"},
    {name = "João Raf"},
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
]
agents = [
    "litellm>=1.40",
    "openai>=1.30",
    "anthropic>=0.30",
    "google-generativeai>=0.8",
]
infra = [
    "supabase>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
all = ["paganini-aios[rag,agents,infra]"]

[project.scripts]
paganini = "packages.kernel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
target-version = "py311"
line-length = 100
